--- a/Makefile.am
+++ b/Makefile.am
@@ -24,9 +24,10 @@
 # Boston, MA 02110-1301, USA.
 #
 
-SUBDIRS = compat afm afmlib lib scripts intl src po states docs w32
+SUBDIRS = compat afm afmlib lib scripts intl src po states docs
 
-EXTRA_DIST = README.ESCAPES README.DOS ascii.txt			\
+
+EXTRA_DIST = README.ESCAPES ascii.txt					\
 asciifise.txt asciidkno.txt 88591.txt 88592.txt 88593.txt 88594.txt	\
 88595.txt 88597.txt 88599.txt 885910.txt ibmpc.txt mac.txt vms.txt	\
 hp8.txt koi8.txt mtr.eps mtr_small.eps mtr_tiny.eps
